==> zhang-chenhao-creator/hdu-projects-public/embedded-systems/stm32-temperature-alarm/Core/OLED/ssd1306.c <==
#include "ssd1306.h"
#include "i2c.h"
#define OLED_FLIP_X    1
#define OLED_FLIP_Y    1
#define ABS(x)   ((x) > 0 ? (x) : -(x))

static void OLED_WriteCmd(uint8_t cmd)
{
    HAL_I2C_Mem_Write(&hi2c1, SSD1306_I2C_ADDR, 0x00, I2C_MEMADD_SIZE_8BIT, &cmd, 1, 100);
}

static void OLED_WriteData(uint8_t dat)
{
    HAL_I2C_Mem_Write(&hi2c1, SSD1306_I2C_ADDR, 0x40, I2C_MEMADD_SIZE_8BIT, &dat, 1, 100);
}

static void OLED_WriteCmd(uint8_t cmd)
{
    OLED_IIC_Start();
    OLED_IIC_SendByte(SSD1306_I2C_ADDR);
    OLED_IIC_SendByte(0x00);
    OLED_IIC_SendByte(cmd);
    OLED_IIC_Stop();
}

static void OLED_WriteData(uint8_t dat)
{
    OLED_IIC_Start();
    OLED_IIC_SendByte(SSD1306_I2C_ADDR);
    OLED_IIC_SendByte(0x40);
    OLED_IIC_SendByte(dat);
    OLED_IIC_Stop();
}

void SSD1306_init(void)
{
    int tick = HAL_GetTick();
    if (tick < 100)
        HAL_Delay(100 - tick);

    uint8_t seg_com[2];

    HAL_Delay(100);

    seg_com[0] = OLED_FLIP_X ? 0xA0 : 0xA1;
    seg_com[1] = OLED_FLIP_Y ? 0xC0 : 0xC8;

    OLED_SelfDetect();

    SSD1306_WriteByte(0xAE, OLED_CMD);
    HAL_Delay(10);

    SSD1306_WriteByte(0xD5, OLED_CMD);
    SSD1306_WriteByte(0xF0, OLED_CMD);

    SSD1306_WriteByte(0xA8, OLED_CMD);
    SSD1306_WriteByte(0x3F, OLED_CMD);

    SSD1306_WriteByte(0xD3, OLED_CMD);
    SSD1306_WriteByte(0x00, OLED_CMD);

    SSD1306_WriteByte(0x40, OLED_CMD);

    SSD1306_WriteByte(seg_com[0], OLED_CMD);
    SSD1306_WriteByte(seg_com[1], OLED_CMD);

    SSD1306_WriteByte(0x81, OLED_CMD);
    SSD1306_WriteByte(200, OLED_CMD);

    SSD1306_WriteByte(0xA4, OLED_CMD);
    SSD1306_WriteByte(0xA6, OLED_CMD);

    SSD1306_WriteByte(0x20, OLED_CMD);
    SSD1306_WriteByte(0x02, OLED_CMD);

    SSD1306_WriteByte(0xDA, OLED_CMD);
    SSD1306_WriteByte(0x12, OLED_CMD);

    SSD1306_WriteByte(0xD9, OLED_CMD);
    SSD1306_WriteByte(0xF1, OLED_CMD);

    SSD1306_WriteByte(0xDB, OLED_CMD);
    SSD1306_WriteByte(0x20, OLED_CMD);

    SSD1306_WriteByte(0x8D, OLED_CMD);
    SSD1306_WriteByte(0x14, OLED_CMD);

    SSD1306_WriteByte(0xAD, OLED_CMD);
    SSD1306_WriteByte(0x8B, OLED_CMD);
    SSD1306_WriteByte(0x33, OLED_CMD);

    SSD1306_Fill(GUI_COLOR_BLACK);
    SSD1306_UpdateScreen();
    SSD1306_WriteByte(0xAF, OLED_CMD);

    SSD1306.CurrentX = SSD1306.CurrentY = 0;
    SSD1306.Initialized = 1;
}

void SSD1306_UpdateScreen(void)
{
    uint8_t m, st;
    st = (OLED_ChipType == CHIP_SH1106) ? 0x02 : 0x00;

    for (m = 0; m < 8; m++)
    {
        SSD1306_WriteByte(0xb0 + m, OLED_CMD);
        SSD1306_WriteByte(st, OLED_CMD);
        SSD1306_WriteByte(0x10, OLED_CMD);
        SSD1306_WriteMuliByte((uint8_t *)&SSD1306_Buffer[128 * m], 128, OLED_DATA);
    }
}

void SSD1306_DrawPixel(uint16_t x, uint16_t y, GUI_COLOR color)
{
    if (x >= SSD1306_WIDTH || y >= SSD1306_HEIGHT) {
        return;
    }
    if (SSD_Trans && color == COLOR_B)
        return;

    if (SSD1306.Inverted) {
        color = (GUI_COLOR)!color;
    }

    if (color == GUI_COLOR_WHITE) {
        SSD1306_Buffer[x + (y / 8) * SSD1306_WIDTH] |= 1 << (y % 8);
    } else {
        SSD1306_Buffer[x + (y / 8) * SSD1306_WIDTH] &= ~(1 << (y % 8));
    }
}
